@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/busybox
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.362 2013/09/29 00:55:52 vapier Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.363 2014/01/01 17:18:40 vapier Exp $
+
+*busybox-1.22.0 (01 Jan 2014)
+
+  01 Jan 2014; Mike Frysinger <vapier@gentoo.org> +busybox-1.22.0.ebuild:
+  Version bump.
 
   29 Sep 2013; Mike Frysinger <vapier@gentoo.org>
   +files/busybox-1.21.1-trylink-only-prefix-libs-with-l.patch,
